<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_page">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.covidapp.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_page"
        android:name="com.example.covidapp.MyPage.MyPageFragment"
        android:label="@string/my_page"
        tools:layout="@layout/fragment_my_page" />

    <fragment
        android:id="@+id/nav_booking"
        android:name="com.example.covidapp.Booking.BookingFragment"
        android:label="@string/booking"
        tools:layout="@layout/fragment_booking" />

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.covidapp.Dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_deaths_and_cases"
        android:name="com.example.covidapp.Dashboard.DeathsAndCasesFragment"
        android:label="@string/deaths_and_cases"
        tools:layout="@layout/fragment_deaths_and_cases" />

    <fragment
        android:id="@+id/nav_doses_age_product"
        android:name="com.example.covidapp.Dashboard.DosesAgeProductFragment"
        android:label="@string/doses_age_product"
        tools:layout="@layout/fragment_doses_age_product" />

    <fragment
        android:id="@+id/nav_distributed_doses"
        android:name="com.example.covidapp.Dashboard.DistributedDosesFragment"
        android:label="@string/distributed_doses"
        tools:layout="@layout/fragment_distributed_doses" />

    <fragment
        android:id="@+id/nav_county_numbers"
        android:name="com.example.covidapp.Dashboard.CountyNumbersFragment"
        android:label="@string/county_numbers"
        tools:layout="@layout/fragment_county_numbers" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.example.covidapp.faq.FaqFragment"
        android:label="@string/faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/nav_admin_menu"
        android:name="com.example.covidapp.HealthAdmin.AdminMenuFragment"
        android:label="@string/admin_menu"
        tools:layout="@layout/fragment_admin_menu" />

    <fragment
        android:id="@+id/nav_questionnaire_response"
        android:name="com.example.covidapp.HealthAdmin.QuestionnaireResponseFragment"
        android:label="@string/questionnaire_response"
        tools:layout="@layout/fragment_questionnaire_response" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.covidapp.LogIn.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_passport"
        android:name="com.example.covidapp.Passport.PassportFragment"
        android:label="@string/passport"
        tools:layout="@layout/fragment_passport" />

    <fragment
        android:id="@+id/nav_user_reg"
        android:name="com.example.covidapp.UserReg.UserRegFragment"
        android:label="@string/user_reg"
        tools:layout="@layout/fragment_user_reg" />



    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.covidapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.covidapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>