<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_MyPage"
            android:icon="@drawable/user"
            android:title="@string/menu_mypage" />
        <item
            android:id="@+id/nav_Dashboard"
            android:icon="@drawable/dashboard2"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_Booking"
            android:icon="@drawable/book"
            android:title="@string/menu_booking" />
        <item
            android:id="@+id/nav_Passport"
            android:icon="@drawable/passport"
            android:title="@string/menu_passport" />
        <item
            android:id="@+id/nav_Notifikationer"
            android:icon="@drawable/mail"
            android:title="@string/menu_Notifikationer" />
        <item
            android:id="@+id/nav_FAQ"
            android:icon="@drawable/question"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_Login"
            android:icon="@drawable/lock"
            android:title="@string/menu_login" />

    </group>
</menu>


    <!--
    Home
    Dashboard
    Min sida
    Boka tid
    Pass
    Notifikationer
    FAQ
    Login/Logout
    -->